// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchImportsMessage should follow dynamic renames in imports 1`] = `
{
  "importsByAsset": [
    {
      "assetId": "ASSET#testFinal",
      "wml": "<Asset uuid=(testFinal)>
    <Room
        uuid=(testImportFoo)
        key=(testImportFoo)
        origin=(ASSET#testImportAssetOne,ASSET#testFinal)
    >
        <ShortName>StubFoo</ShortName>
    </Room>
    <Room
        uuid=(testNonImportTwo)
        key=(testNonImportTwo)
        origin=(ASSET#testFinal)
    >
        <Exit to=(testImportFoo)>test exit</Exit>
    </Room>
</Asset>",
    },
  ],
  "messageType": "FetchImports",
}
`;

exports[`fetchImportsMessage should import multilevel and avoid colliding stub names 1`] = `
{
  "importsByAsset": [
    {
      "assetId": "ASSET#testFinal",
      "wml": "<Asset uuid=(testFinal)>
    <Room uuid=(stub) origin=(ASSET#testImportAssetThree) ref={0}>
        <ShortName>AssetThreeStub</ShortName>
    </Room>
    <Room
        uuid=(testStubOne)
        origin=(ASSET#testImportAssetThree,ASSET#testImportAssetTwo)
        ref={0}
    >
        <ShortName>Asset Three</ShortName>
    </Room>
    <Room
        uuid=(testImportThree)
        key=(testImportThree)
        origin=(ASSET#testImportAssetThree,ASSET#testImportAssetTwo,ASSET#testFinal)
    >
        <Example uuid=(testImportTwoExample) origin=(ASSET#testImportAssetTwo)>
            <Description>Asset Two</Description>
        </Example>
        <Exit to=(ROOM#stub)>test exit</Exit>
        <Exit to=(ROOM#testStubOne)>test exit</Exit>
    </Room>
</Asset>",
    },
  ],
  "messageType": "FetchImports",
}
`;

exports[`fetchImportsMessage should properly stub out features in room description 1`] = `
{
  "importsByAsset": [
    {
      "assetId": "ASSET#testFinal",
      "wml": "<Asset uuid=(testFinal)>
    <Feature
        uuid=(testFeature)
        key=(featureImport)
        origin=(ASSET#testImportAssetFour,ASSET#testFinal)
    />
    <Room
        uuid=(testRoomWithFeatures)
        key=(testRoomWithFeatures)
        origin=(ASSET#testImportAssetFour,ASSET#testFinal)
    >
        
    </Room>
</Asset>",
    },
  ],
  "messageType": "FetchImports",
}
`;

exports[`fetchImportsMessage should recursive fetch one level of element and stubs when passed import key 1`] = `
{
  "importsByAsset": [
    {
      "assetId": "ASSET#testFinal",
      "wml": "<Asset uuid=(testFinal)>
    <Room
        uuid=(testImportOne)
        key=(testImportOne)
        origin=(ASSET#testImportAssetOne,ASSET#testFinal)
    >
        <Example
            uuid=(testImportOneExample)
            origin=(ASSET#testImportAssetOne,ASSET#testFinal)
        >
            <Description>OneTwo</Description>
        </Example>
        <Exit to=(testImportStubOne)>test exit one</Exit>
    </Room>
    <Room
        uuid=(testImportStubOne)
        key=(testImportStubOne)
        origin=(ASSET#testImportAssetOne,ASSET#testFinal)
    >
        <ShortName>StubTwo</ShortName>
    </Room>
</Asset>",
    },
  ],
  "messageType": "FetchImports",
}
`;

exports[`fetchImportsMessage should return element and stubs when passed non-import key 1`] = `
{
  "importsByAsset": [
    {
      "assetId": "ASSET#testFinal",
      "wml": "<Asset uuid=(testFinal)>
    <Room uuid=(testNonImport) key=(testNonImport) origin=(ASSET#testFinal)>
        <Example uuid=(testNonImportExample) origin=(ASSET#testFinal)>
            <Description>DescriptionOne</Description>
        </Example>
        <Exit to=(testNonImportStub)>test exit</Exit>
    </Room>
    <Room
        uuid=(testNonImportStub)
        key=(testNonImportStub)
        origin=(ASSET#testFinal)
    >
        <ShortName>StubOne</ShortName>
    </Room>
</Asset>",
    },
  ],
  "messageType": "FetchImports",
}
`;

exports[`fetchImportsMessage should return empty when passed no keys 1`] = `
{
  "importsByAsset": [
    {
      "assetId": "ASSET#testFinal",
      "wml": "<Asset uuid=(testFinal) />",
    },
  ],
  "messageType": "FetchImports",
}
`;
